# kerndiff

./: .gitignore  LICENSE  README.md  logs.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  coalesced_v1.cu  coalesced_v2.cu  compute_bound.cu  cuda_inclusive_scan.cu  flash_attn_naive.cu  flash_attn_tiled.cu  layernorm_v1.cu  layernorm_v2.cu  mamba_fused.cu  mamba_unfused.cu  mem_bound.cu  noop_kernel.cu  prefix_scan_v1.cu  prefix_scan_v2.cu  reduce.cu  reduce_v2.cu  softmax_v1.cu  softmax_v2.cu  triton_scan_v1.py  triton_scan_v2.py  vec_add_v1.cu  vec_add_v2.cu
kerndiff/: __main__.py  cli.py  compiler.py  config.py  diff.py  metrics.py  parser.py  profiler.py  ptx.py  renderer.py  roofline.py
kerndiff/backends/: cuda.py  triton.py
kerndiff/fixtures/: harness_template.cu  v1_ncu.csv  v1_ptx_counts.json  v2_ncu.csv  v2_ptx_counts.json
src/kerndiff/: cli.py  cli_commands.py  cli_state.py  cli_support.py  compiler.py  config.py  diff.py  metrics.py  profiler.py  ptx.py  renderer.py  roofline.py  suggestions.py
src/kerndiff/fixtures/: harness_template.cu  harness_template_triton.py  harness_template_triton_persistent.py  v1_ncu.csv  v2_ncu.csv
src/kerndiff/runtimes/: __init__.py  cuda.py  triton.py
src/kerndiff/tools/: validate_roofline.py
tests/: conftest.py  test_backends.py  test_cli.py  test_compiler.py  test_config.py  test_correctness_nan.py  test_correctness_triton.py  test_diff.py  test_diff_boundaries.py  test_fixes.py  test_harness_input.py  test_new_features.py  test_numerical_correctness.py  test_parser.py  test_parser_edge_cases.py  test_profiler.py  test_ptx.py  test_renderer.py  test_renderer_edge_cases.py  test_roofline_correctness.py  test_runtimes.py  test_stress.py  test_triton_backend_persistent.py
