[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kerndiff"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
kerndiff = "kerndiff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kerndiff"]

[tool.hatch.build.targets.sdist]
include = [
  "src/kerndiff",
  "tests",
  "examples",
  "README.md",
  "pyproject.toml",
]
